Fix sonar + tests